--- a/packages/components/Sprite/example/Example.html
+++ b/packages/components/Sprite/example/Example.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Default sprite <span>{'<Sprite src="..." width="..." height="..."/>'}</span></h1>
+  <h4>Padrão</h4>
   <div class="row">
     <Sprite ref:sprite src="./static/stone.png" width="70px"/>
   </div>
@@ -21,13 +21,11 @@
     background-color: #ddd;
   }
 
-  h1 span {
+  h4 {
     display: inline-block;
     vertical-align: middle;
-    margin-left: 10px;
     font-size: 14px;
     font-weight: bold;
-    font-family: monospace;
   }
 
   .container {
@@ -37,6 +35,6 @@
   }
 
   .row {
-    margin-bottom: 50px;
+    margin: 20px 0px 20px 0px;
   }
 </style>
