--- a/packages/components/AppBar/example/Example.html
+++ b/packages/components/AppBar/example/Example.html
@@ -1,16 +1,14 @@
-<div class="container">
+<h1>Default AppBar</h1>
+<br><br>
+<AppBar></AppBar>
 
-<h4>Padrão</h4>
-<div class="row">
-  <AppBar></AppBar>
-</div>
+<h1>Colored AppBar</h1>
+<br><br>
+<AppBar bgColor="red" textColor="green" title="Colored"></AppBar>
 
-<h4>Colorida com Título</h4>
-<div class="row">
-  <AppBar bgColor="#95C93F" textColor="green" title="Stone App"></AppBar>
-</div>
-
-</div>
+<h1>AppBar with title</h1>
+<br><br>
+<AppBar title="Lorem ipsum "></AppBar>
 
 <script>
   import MambaStore from '@mamba/store';
@@ -24,23 +22,3 @@
     },
   };
 </script>
-
-<style>
-  h4 {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 14px;
-    font-weight: bold;
-  }
-
-  .container {
-    max-width: 80%;
-    width: 700px;
-    margin: 80px auto;
-  }
-
-  .row {
-    margin: 20px 0px 20px 0px;
-    width: 33.12567%;
-  }
-</style>
