--- a/packages/components/Button/example/Example.html
+++ b/packages/components/Button/example/Example.html
@@ -1,36 +1,40 @@
 <div class="container">
-  <h4>Padrão</h4>
+  <h1>Default button <span>{'<Button>Label</Button>'}</span></h1>
   <div class="row">
     <Button on:click="console.log(event)">Label</Button>
   </div>
 
-  <h4>Desativado</h4>
+  <h1>Disabled button <span>{'<Button disabled>Label</Button>'}</span></h1>
   <div class="row">
     <Button on:click="console.log(event)" disabled>Label</Button>
   </div>
 
-  <h4>Tamanhos</h4>
+  <h1>Small button <span>{'<Button size="small">Label</Button>'}</span></h1>
   <div class="row">
-    <div class="group">
-      <Button on:click="console.log(event)" size="small">Label</Button>
-      <Button on:click="console.log(event)">Label</Button>
-      <Button on:click="console.log(event)" size="large">Label</Button>
-    </div>
+    <Button on:click="console.log(event)" size="small">Label</Button>
   </div>
 
-  <h4>Custom width button</h4>
+  <h1>Large button <span>{'<Button size="large">Label</Button>'}</span></h1>
   <div class="row">
-    <Button on:click="console.log(event)" width="33%">Label</Button>
+    <Button on:click="console.log(event)" size="large">Label</Button>
   </div>
 
-  <h4>Personalizado</h4>
+  <h1>Custom width button <span>{'<Button width="80%">Label</Button>'}</span></h1>
+  <div class="row">
+    <Button on:click="console.log(event)" width="80%">Label</Button>
+  </div>
+
+  <h1>Custom colored button <span>{'<Button textColor="white" bgColor="black">Label</Button>'}</span></h1>
   <div class="row">
     <Button on:click="console.log(event)" textColor="white" bgColor="black">Label</Button>
-     <Button>
+  </div>
+
+  <h1>Button with custom content <span>{'<Button>...</Button>'}</span></h1>
+  <div class="row">
+    <Button>
       <Icon symbol="chevron-right" color="white"/>
     </Button>
   </div>
-
 </div>
 
 <style>
@@ -38,10 +42,13 @@
     background-color: #ddd;
   }
 
-  h4 {
+  h1 span {
     display: inline-block;
     vertical-align: middle;
+    margin-left: 10px;
+    font-size: 14px;
     font-weight: bold;
+    font-family: monospace;
   }
 
   .container {
@@ -51,9 +58,8 @@
   }
 
   .row {
-    margin: 20px 0px 20px 0px;
+    margin-bottom: 50px;
   }
-
 </style>
 
 <script>
