--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -1,41 +1,40 @@
-<div class="wrapper">
-  <Collection title="Rede">
-    <Row label="1. Configurar" href="/network/configure"/>
-  </Collection>
+<Collection title="Rede">
+  <Row label="1. Configurar" href="/network/configure"/>
+</Collection>
 
-  <Collection title="Dispositivo">
-    <Row label="2. Som do Teclado">
-      <div slot="controller">
-        <Icon symbol="settings"/>
-      </div>
-    </Row>
-    <Row label="3. Luz do Teclado">
-      <div slot="controller">
-        <Icon symbol="settings"/>
-      </div>
-    </Row>
-  </Collection>
+<Collection title="Dispositivo">
+  <Row label="2. Som do Teclado">
+    <div slot="controller">
+      <Icon symbol="account"/>
+    </div>
+  </Row>
+  <Row label="3. Luz do Teclado">
+    <div slot="controller">
+      <Icon symbol="account"/>
+    </div>
+  </Row>
+</Collection>
 
-  <Collection>
-    <Row label="Rede Wifi Stone Co.">
-      <div slot="controller">
-        <Icon symbol="wifi" color="green" level={2}/>
-      </div>
-      <p slot="description">
-        Conectado
-      </p>
-    </Row>
-    <Row label="Rede Wifi Sharon" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic maiores mollitia asperiores delectus, deleniti nobis fugiat quas eaque aspernatur atque ex voluptate modi fuga, iusto minus magni reprehenderit libero numquam.">
-      <div slot="controller">
-        <Icon symbol="wifi" color="green" level={0}/>
-      </div>
-    </Row>
-  </Collection>
+<Collection>
+  <Row label="HideYoKidsHideYoWiFi">
+    <div slot="controller">
+      <Icon symbol="wifi" color="green" level={2}/>
+    </div>
+    <p slot="description">
+      Conectado
+    </p>
+  </Row>
+  <Row label="HideYoKidsHideYoWiFi" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic maiores mollitia asperiores delectus, deleniti nobis fugiat quas eaque aspernatur atque ex voluptate modi fuga, iusto minus magni reprehenderit libero numquam.">
+    <div slot="controller">
+      <Icon symbol="wifi" color="green" level={0}/>
+    </div>
+  </Row>
+</Collection>
 
-  <Collection>
-    <Row label="Outras Redes" href="/" description="Lorem ipsum dolor sit amet consectetur adipisicing elit."/>
-  </Collection>
-</div>
+<Collection>
+  <Row label="HideYoKidsHideYoWiFi" href="/" description="Lorem ipsum dolor sit amet consectetur adipisicing elit."/>
+</Collection>
+
 <script>
   import Icon from '@mamba/icon';
   import { Collection, Row } from '../src/index.js';
@@ -52,10 +51,5 @@
 <style>
   :global(body) {
     background-color: #efefef;
-  }
-
-  .wrapper {
-    display: inline-block;
-    width: 33.12567%;
   }
 </style>
