--- a/packages/components/Input/example/Example.html
+++ b/packages/components/Input/example/Example.html
@@ -1,41 +1,51 @@
 <div class="container">
 
-  <h4>Padrão </h4>
+  <h1>Default input <span>{'<Input />'}</span></h1>
   <div class="row">
     <Input />
   </div>
 
-  <h4>Alfanúmerico</h4>
+  <h1>Alphanumeric input <span>{'<Input alphanumeric/>'}</span></h1>
   <div class="row">
     <Input alphanumeric />
   </div>
 
-  <h4>Autofocado</h4>
+  <h1>Autofocused input <span>{'<Input autofocus />'}</span></h1>
   <div class="row">
     <Input autofocus/>
   </div>
 
-  <h4>Senha</h4>
+  <h1>Password input <span>{'<Input type="password"/>'}</span></h1>
   <div class="row">
     <Input type="password" />
   </div>
 
-  <h4>Senha com Visibilidade</h4>
+  <h1>Readable Password input <span>{'<Input type="password" readable/>'}</span></h1>
   <div class="row">
     <Input type="password" readable />
   </div>
 
-  <h4>Título</h4>
+  <h1>Labeled input <span>{'<Input label="Input"/>'}</span></h1>
   <div class="row">
     <Input label="Input"/>
   </div>
 
-  <h4>Custom colored labeled input</h4>
+  <h1>Labeled password input <span>{'<Input type="password" label="Password"/>'}</span></h1>
   <div class="row">
-    <Input bgColor="#A8A9AD" textColor="white" label="Text"/>
+    <Input type="password" label="Password"/>
   </div>
 
-  <h4>Validated input</h4>
+  <h1>Custom colored input <span>{'<Input bgColor="red" textColor="white" />'}</span></h1>
+  <div class="row">
+    <Input bgColor="red" textColor="white"/>
+  </div>
+
+  <h1>Custom colored labeled input <span>{'<Input bgColor="red" textColor="white" label="Text" />'}</span></h1>
+  <div class="row">
+    <Input bgColor="red" textColor="white" label="Text"/>
+  </div>
+
+  <h1>Validated input <span>{'<Input validate="method()"/>'}</span></h1>
   <div class="row">
     <Input
       type="password"
@@ -51,10 +61,13 @@
     background-color: #ddd;
   }
 
-  h4 {
+  h1 span {
     display: inline-block;
     vertical-align: middle;
+    margin-left: 10px;
+    font-size: 14px;
     font-weight: bold;
+    font-family: monospace;
   }
 
   .container {
@@ -64,8 +77,7 @@
   }
 
   .row {
-    margin: 20px 0px 20px 0px;
-    width: 60%;
+    margin-bottom: 50px;
   }
 </style>
 
