--- a/packages/components/Progress/example/Example.html
+++ b/packages/components/Progress/example/Example.html
@@ -1,41 +1,41 @@
 <div class="container">
-  <h4>Barra Padrão </h4>
+  <h1>Progress bar <span>{'<ProgressBar/>'}</span></h1>
 
   <div class="row">
     <ProgressBar />
   </div>
 
-  <h4>Cor</h4>
+  <h1>Progress bar with custom color <span>{'<ProgressBar color="#ddd"/>'}</span></h1>
 
   <div class="row">
     <ProgressBar color="#ddd" />
   </div>
 
-  <h4>Altura</h4>
+  <h1>Progress bar with custom height <span>{'<ProgressBar height="4px"/>'}</span></h1>
 
   <div class="row">
-    <ProgressBar height="12px" />
+    <ProgressBar height="4px" />
   </div>
 
-  <h4>Progressão Definida</h4>
+  <h1>Progress bar with defined progress <span>{'<ProgressBar progress="'}{fakeProgress}{'%"/>'}</span></h1>
 
   <div class="row">
     <ProgressBar progress="{fakeProgress}" height="8px" />
   </div>
 
-  <h4>Circular Padrão</h4>
+  <h1>Circular Progress bar <span>{'<ProgressBar />'}</span></h1>
 
   <div class="row">
     <CircularProgress />
   </div>
 
-  <h4>Velocidade</h4>
+  <h1>Circular Progress bar with custom speed <span>{'<ProgressBar speed="1..10"/>'}</span></h1>
 
   <div class="row">
     <CircularProgress speed="5"/>
   </div>
 
-  <h4>Progressão Definida</h4>
+  <h1>Circular Progress bar defined progress<span>{'<ProgressBar circular progress="'}{fakeProgress}{'%"/>'}</span></h1>
 
   <div class="row">
     <CircularProgress progress="{fakeProgress}"/>
@@ -44,10 +44,13 @@
 </div>
 
 <style>
-  h4 {
+  h1 span {
     display: inline-block;
     vertical-align: middle;
+    margin-left: 10px;
+    font-size: 14px;
     font-weight: bold;
+    font-family: monospace;
   }
 
   .container {
@@ -57,8 +60,7 @@
   }
 
   .row {
-    margin: 20px 0px 20px 0px;
-    width: 33.12567%;
+    margin-bottom: 50px;
   }
 </style>
 
