--- a/packages/components/QRCode/example/Example.html
+++ b/packages/components/QRCode/example/Example.html
@@ -1,17 +1,21 @@
 <div class="container">
-  <h4>Padrão</h4>
+  <h1>Default QR Code<span>{'<QRCode></QRCode>'}</span></h1>
+  <div class="row">
+    <QRCode/>
+  </div>
+  <h1>Setting QRCode Value<span>{'<QRCode value="http://stone.com.br"></QRCode>'}</span></h1>
   <div class="row">
     <QRCode value="http://stone.com.br/"/>
   </div>
-  <h4>Taxa de Correção</h4>
+  <h1>...and Colors/Size/Logo<span>{'<QRCode color="yourcolorcss" logo="logopath"></QRCode>'}</span></h1>
   <div class="row">
-    <QRCode value="http://stone.com.br/" level='H'/>
+    <QRCode size="small" logo="./static/logo.png" color="blue" value="http://stone.com.br"/>
+    <QRCode size="medium" logo="./static/logo.png" color="red" value="http://stone.com.br"/>
+    <QRCode size="large" logo="./static/logo.png" color="purple" value="http://stone.com.br"/>
   </div>
-  <h4>Cores, Tamanhos e Logo</h4>
+  <h1>Error Rate Level<span>{'<QRCode value="OLA" level="H"></QRCode>'}</span></h1>
   <div class="row">
-    <QRCode size="small" logo="./static/logo.png" color="#14AA4B" value="http://stone.com.br"/>
-    <QRCode size="medium" logo="./static/logo.png" color="#95C93F" value="http://stone.com.br"/>
-    <QRCode size="large" logo="./static/logo.png" color="#103A21" value="http://stone.com.br"/>
+    <QRCode value="OLA" level='H'/>
   </div>
 </div>
 
@@ -21,10 +25,13 @@
     background-color: #ddd;
   }
 
-  h4 {
+  h1 span {
     display: inline-block;
     vertical-align: middle;
+    margin-left: 10px;
+    font-size: 14px;
     font-weight: bold;
+    font-family: monospace;
   }
 
   .container {
@@ -32,7 +39,7 @@
   }
 
   .row {
-    margin: 20px 0px 20px 0px;
+    margin-bottom: 50px;
   }
 
 </style>
