--- a/packages/components/AppBar/src/AppBar.html
+++ b/packages/components/AppBar/src/AppBar.html
@@ -19,7 +19,7 @@
 </header>
 
 <script>
-  import Router from '@kaisermann/svelte-router';
+  import Router from 'svelte-page';
 
   export default {
     components: {
