--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -9,7 +9,7 @@
 </ConfirmationDialog>
 
 <script>
-  import Router from '@kaisermann/svelte-router';
+  import Router from 'svelte-page';
   import App from '@mamba/pos/api/app.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
   import { ConfirmationDialog } from '@mamba/dialog';
