--- a/packages/components/Collection/src/Row.html
+++ b/packages/components/Collection/src/Row.html
@@ -25,7 +25,7 @@
 </div>
 
 <script>
-  import Router from '@kaisermann/svelte-router';
+  import Router from 'svelte-page';
 
   function findClosest(el, cb) {
     if (!el || el.nodeType !== 1) return null;
