--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -14,6 +14,8 @@
   import Keyboard from '@mamba/pos/api/keyboard.js';
   import { ConfirmationDialog } from '@mamba/dialog';
 
+  import Keystroke from './Keystroke.html';
+
   /** Return if a certain shortcut key is valid */
   const isValidShortcut = (keyName, e) =>
     keyName &&
@@ -73,18 +75,27 @@
         }
       },
       onKeyup(e) {
-        const keyName = Keyboard.getKeyName(e.keyCode);
-        const isShortcutsDisabled =
-          this.store && !this.store.meta.get('shortcuts');
+        const keyName = Keyboard.getKeyName(e.charCode || e.which || e.keyCode);
+
+        /** If there's a manual keystroke handler, let it do its job */
+        if(Keystroke.register[keyName] &&
+          Keystroke.register[keyName].some(handler => handler.get().active)
+        ) {
+            return;
+        }
+
+        const shortcutsEnabled =
+          this.store && this.store.meta.get('shortcuts');
 
         /**
          * Close the app if 'close' button clicked,
          * and there's no button with 'shortcut="close"'
          * */
-        if (keyName === 'close' && !isShortcutsDisabled) {
+        if (keyName === 'close') {
           e.preventDefault();
-          /** If no shortcut element found */
-          if (!document.querySelector(`[shortcut='close']`) && this.store) {
+          if(!shortcutsEnabled ||
+            (shortcutsEnabled && !document.querySelector(`[shortcut='close']`))
+          ) {
             this.store.meta.closeApp();
             return;
           }
@@ -112,7 +123,7 @@
         const shortcutEls = document.querySelectorAll(`[shortcut='${keyName}']`);
 
         /** If shortcuts are disabled or no shortcut element found, do nothing */
-        if (isShortcutsDisabled || shortcutEls.length === 0) {
+        if (!shortcutsEnabled || shortcutEls.length === 0) {
           return;
         }
 
