--- a/packages/components/Printable/src/Printable.html
+++ b/packages/components/Printable/src/Printable.html
@@ -22,7 +22,7 @@
     ref:failureDialog
     title="IMPRESSORA SEM PAPEL"
     on:positive="print()"
-    on:negative="reset()"
+    on:negative="ignoreFailure()"
   >
     Tentar imprimir novamente?
   </ConfirmationDialog>
@@ -69,6 +69,10 @@
     methods: {
       reset() {
         this.set({ _state: STATES.IDLE, _printingPromise: undefined });
+      },
+      ignoreFailure() {
+        this.fire('ignoreFailure');
+        this.reset();
       },
       print() {
         const content = this.refs.printableContent;
