--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -172,7 +172,7 @@
   @import '@mamba/styles/theme.pcss';
 
   .app {
-    height: 100%;
+    min-height: 100%;
     background-color: $app-bg-color;
   }
 </style>
